# pyrevdns

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  semgrep.yml
pyrevdns/: __init__.py  __main__.py  arg_parser.py  pyrevdns.py
